[gd_scene load_steps=19 format=3 uid="uid://b2n7ukwvvveey"]

[ext_resource type="Script" path="res://Opossum.gd" id="1_6760d"]
[ext_resource type="Texture2D" uid="uid://cbg4anbkbi5ng" path="res://Sunny-land-files/Graphical Assets/sprites/enemy-death/enemy-death-1.png" id="2_h4wn0"]
[ext_resource type="Texture2D" uid="uid://b8u78wa3vmrue" path="res://Sunny-land-files/Graphical Assets/sprites/enemy-death/enemy-death-2.png" id="3_81anq"]
[ext_resource type="Texture2D" uid="uid://da34t2wexgbrc" path="res://Sunny-land-files/Graphical Assets/sprites/enemy-death/enemy-death-3.png" id="4_iwdhs"]
[ext_resource type="Texture2D" uid="uid://cqbbsrycg7kid" path="res://Sunny-land-files/Graphical Assets/sprites/enemy-death/enemy-death-4.png" id="5_xrshl"]
[ext_resource type="Texture2D" uid="uid://h08v5s8u1oqk" path="res://Sunny-land-files/Graphical Assets/sprites/enemy-death/enemy-death-5.png" id="6_0gqn7"]
[ext_resource type="Texture2D" uid="uid://ce3qguicomal4" path="res://Sunny-land-files/Graphical Assets/sprites/enemy-death/enemy-death-6.png" id="7_8bteu"]
[ext_resource type="Texture2D" uid="uid://2puxweofrhyo" path="res://Sunny-land-files/Graphical Assets/sprites/opossum/opossum-1.png" id="8_47012"]
[ext_resource type="Texture2D" uid="uid://ckgpqx8vjycti" path="res://Sunny-land-files/Graphical Assets/sprites/opossum/opossum-2.png" id="9_2kswu"]
[ext_resource type="Texture2D" uid="uid://1rrl8pbh6hki" path="res://Sunny-land-files/Graphical Assets/sprites/opossum/opossum-3.png" id="10_cxp0n"]
[ext_resource type="Texture2D" uid="uid://b3doiinay6i7" path="res://Sunny-land-files/Graphical Assets/sprites/opossum/opossum-4.png" id="11_p12wn"]
[ext_resource type="Texture2D" uid="uid://kokyb8w3l7ps" path="res://Sunny-land-files/Graphical Assets/sprites/opossum/opossum-5.png" id="12_sf0lu"]
[ext_resource type="Texture2D" uid="uid://i0fi24b7jn5a" path="res://Sunny-land-files/Graphical Assets/sprites/opossum/opossum-6.png" id="13_mogot"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r8ieq"]
size = Vector2(21, 14)

[sub_resource type="SpriteFrames" id="SpriteFrames_dh08b"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_h4wn0")
}, {
"duration": 1.0,
"texture": ExtResource("3_81anq")
}, {
"duration": 1.0,
"texture": ExtResource("4_iwdhs")
}, {
"duration": 1.0,
"texture": ExtResource("5_xrshl")
}, {
"duration": 1.0,
"texture": ExtResource("6_0gqn7")
}, {
"duration": 1.0,
"texture": ExtResource("7_8bteu")
}],
"loop": false,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_47012")
}, {
"duration": 1.0,
"texture": ExtResource("9_2kswu")
}, {
"duration": 1.0,
"texture": ExtResource("10_cxp0n")
}, {
"duration": 1.0,
"texture": ExtResource("11_p12wn")
}, {
"duration": 1.0,
"texture": ExtResource("12_sf0lu")
}, {
"duration": 1.0,
"texture": ExtResource("13_mogot")
}],
"loop": true,
"name": &"Move",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_x0krs"]
radius = 167.003

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y7p1h"]
size = Vector2(28, 19)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8wtep"]
size = Vector2(24, 19)

[node name="Opossum" type="CharacterBody2D"]
script = ExtResource("1_6760d")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, 6)
shape = SubResource("RectangleShape2D_r8ieq")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 2)
sprite_frames = SubResource("SpriteFrames_dh08b")
animation = &"Move"
frame = 5
frame_progress = 0.498803

[node name="PlayerDetection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
shape = SubResource("CircleShape2D_x0krs")

[node name="Playerdamage" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Playerdamage"]
position = Vector2(-3, 6.5)
shape = SubResource("RectangleShape2D_y7p1h")

[node name="Enemydie" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemydie"]
position = Vector2(-3, 5.5)
shape = SubResource("RectangleShape2D_8wtep")

[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_player_detection_body_exited"]
[connection signal="body_entered" from="Playerdamage" to="." method="_on_player_death_body_entered"]
[connection signal="body_entered" from="Enemydie" to="." method="_on_player_collision_body_entered"]
